// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App GenericScreen with no route matches snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 24,
      }
    }
  >
    Generic
  </Text>
</View>
`;

exports[`App GenericScreen with route matches snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 24,
      }
    }
  >
    Portfolio
  </Text>
</View>
`;
